--- a/ChannelsControl/templates/base.html
+++ b/ChannelsControl/templates/base.html
@@ -6,19 +6,20 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>{% block title %}Контроль каналов связи{% endblock  %}</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     </head>
     <body data-bs-theme="dark">
 
     <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Контроль каналов</a>
+            <a class="navbar-brand" href="/">Контроль каналов</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Актуальное</a>
+                    <a class="nav-link active" aria-current="page" href="/">Актуальное</a>
                     <a class="nav-link" href="#">История</a>
                     <a class="nav-link" href="#">Отчеты</a>
                     <a class="nav-link disabled">Статистика</a>
