--- a/ChannelsControl/monitor/templates/monitor/incident.html
+++ b/ChannelsControl/monitor/templates/monitor/incident.html
@@ -11,8 +11,11 @@
 
 {% block content %}
 <h1>Пропадание канала №{{ incident_item.pk }}</h1>
-<form method="post">{% csrf_token %}
+<form method="post">
+    {% csrf_token %}
+    {{ form.media.js }}
     {{ form.as_p }}
+
     <input type="submit" value="Update">
 </form>
 
