--- a/ChannelsControl/monitor/templates/monitor/incident.html
+++ b/ChannelsControl/monitor/templates/monitor/incident.html
@@ -12,7 +12,7 @@
 {% block content %}
 <h1>Пропадание канала №{{ incident_item.pk }}</h1>
 
-<form method="post">
+<form method="post" class="col-md-6" style="color:#ffffff">
     {% csrf_token %}
     {{ form.media.js }}
     {{ form.as_p }}
@@ -20,4 +20,7 @@
     <input type="submit" value="Update">
 </form>
 <br> Последнее редактирование: {{ incident_item.updated_at }}
+
+
+
 {% endblock %}
