--- a/ChannelsControl/templates/base.html
+++ b/ChannelsControl/templates/base.html
@@ -21,10 +21,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/">Актуальное</a>
-                    <a class="nav-link" href="#">История</a>
-                    <a class="nav-link" href="#">Отчеты</a>
-                    <a class="nav-link disabled">Статистика</a>
+                    <!--<a class="nav-link active" aria-current="page" href="/">Актуальное</a>-->
+                    <a class="nav-link {% if request.resolver_match.url_name == 'history' %}active{% endif %}" href="/history/">История</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'report' %}active{% endif %}" href="#">Отчеты</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'statistics' %}active{% endif %} disabled">Статистика</a>
                 </div>
             </div>
         </div>
