--- a/ChannelsControl/monitor/templates/monitor/order.html
+++ b/ChannelsControl/monitor/templates/monitor/order.html
@@ -10,6 +10,15 @@
 
 {% block content %}
 <h1>{{title}} </h1>
+
+
+<form action="/your-name/" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
+</form>
+
+
 <table class="table table-hover table-dark table-group-divider">
     <thead >
     <tr>
