--- a/ChannelsControl/monitor/templates/monitor/stat.html
+++ b/ChannelsControl/monitor/templates/monitor/stat.html
@@ -7,7 +7,29 @@
 {% endblock %}
 
 
-
 {% block content %}
+<h1>{{title}} </h1>
+
+<form action="{% url 'stat' %}" method="get" id="interval">
+
+  <div class="box sort pull-right">
+      Оператор:
+      <select name="provider">
+
+    <option selected value="0">Все</option>
+    <option value="Крокодил Гена">Крокодил Гена</option>
+    <option value="Шапокляк">Шапокляк</option>
+    <option value="Крыса Лариса">Крыса Лариса</option>
+   </select>
+    <span>С:</span>
+    <input type="date" id="from" name="trip-from" value="{{ from_date }}" min="2023-03-05" max="2050-03-05">
+    <span>По:</span>
+    <input type="date" id="to" name="trip-to" value="{{ to_date }}" min="2023-03-05" max="2050-03-05">
+    <button type="submit" >
+     Сформировать
+    </button>
+  </div>
+</form>
+
 STAT
 {% endblock %}
