--- a/ChannelsControl/templates/base.html
+++ b/ChannelsControl/templates/base.html
@@ -23,7 +23,7 @@
                 <div class="navbar-nav">
                     <!--<a class="nav-link active" aria-current="page" href="/">Актуальное</a>-->
                     <a class="nav-link {% if request.resolver_match.url_name == 'history' %}active{% endif %}" href="/history/">История</a>
-                    <a class="nav-link {% if request.resolver_match.url_name == 'report' %}active{% endif %}" href="/order/">Отчеты</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'order' %}active{% endif %}" href="/order/">Отчеты</a>
                     <a class="nav-link {% if request.resolver_match.url_name == 'stat' %}active{% endif %} <!--disabled-->" href="/stat/">Статистика</a>
                 </div>
             </div>
