--- a/ChannelsControl/monitor/templates/monitor/index.html
+++ b/ChannelsControl/monitor/templates/monitor/index.html
@@ -9,7 +9,7 @@
 
 
 {% block content %}
-<h1>{{title}} </h1>
+<h1 style="display: inline;">{{title}}</h1> <a href="/incident/add_incident/"><h3 style="display: inline;">Добавить новую</h3></a>
 <table class="table table-hover table-dark table-group-divider">
     <thead >
     <tr>
