History filtering by date, pagination

--- a/ChannelsControl/monitor/templates/monitor/add_incident.html
+++ b/ChannelsControl/monitor/templates/monitor/add_incident.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <h1>Новая проблема каналов связи</h1>
-    <form action="" method="post">{% csrf_token %}
+    <form action="" class="col-md-6" method="post">{% csrf_token %}
       {{ form.as_p }}
     {{ form.media.js }}
       <input type="submit" value="Save" />
